# Track-Detection-Using-Depth-Image

./: TrackDetection_PythonCodes.ipynb  readme.ipynb  readme.md
Images/: track_odom.csv
TrackDetection_CPP/: CMakeLists.txt
TrackDetection_CPP/include/: polyfit.hpp
TrackDetection_CPP/src/: main.cpp
